--- a/src/index.html
+++ b/src/index.html
@@ -309,7 +309,7 @@
 <!--footer section-->
 <footer class="p-5 bg-dark text-light text-center position-relative">
 <div class="container">
-  <p class="lead">Copyright &copy; 2023 Frontend Academy</p>
+  <p class="lead">Copyright &copy; 2023 Frontend Don Academy</p>
 </div>
 
 <a href="" class="position-absolute bottom-0 end-0 p-5">
